# lunar-claude

./: .coderabbit.yaml  .editorconfig  .gitignore  .infisical.json  .lycheecache  .pre-commit-config.yaml  .rumdl.toml  .safety-project.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  fnox.toml  hk.pkl  mise.toml  pyproject.toml  pyrightconfig.json  renovate.json  ruff.toml
.claude/: git-workflow-command-testing.local.md  git-workflow-plugin-review.local.md  hookify.prevent-audit-taint.local.md  hookify.require-uv.local.md  hookify.skill-forced-eval.local.md  plugin-dev-bugs.local.md  plugin-dev-considerations.local.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.cursor/: worktrees.json
.devcontainer/: devcontainer.json
agent-auditor/: .gitignore  MIGRATION.md  README.md
ai_docs/: Python-uv-Script-Examples-and-References.md  README.md  deepwiki-vs-context7.md  firecrawl-python-sdk.md  gitingest.md  hooks-guide-offical.md  hooks-guide.md  monorepo-marketplace.md  plugin-marketplaces.md  plugins-referance.md  plugins.md  verify-structure-analysis.md
docs/: TODO.md  ideas.md  pr-12-verification-aar.md  verify-structure-enhancements-summary.md
scripts/: README.md  bash_command_validator_example.py  cleanup_bash_research.py  extract_docs_example.py  fetch-hooks-guide.py  firecrawl_scrape_url.py  firecrawl_sdk_research.py  intelligent-markdown-lint.py  jina_reader_docs.py  markdown_formatter.py  markdown_linter.py  note_smith.py  rumdl-parser.py  skill-auditor.py  test-skill-auditor-determinism.sh  test_cache_precision.py  (+4 more)
(+1031 files in other folders)
