[project]
name = "lunar-claude"
version = "0.1.0"
description = "Claude Code marketplace"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "claude-agent-sdk>=0.1.6",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[tool.uv]
package = false
